--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ Pillow>=8.2,<10.0
 gunicorn>=20.0,<21.0  # Only needed for production
 requests>=2.25,<3.0
 django-environ==0.12.0 
+dj-database-url==2.3.0
 whitenoise==6.9.0 #or the latest version
