--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ gunicorn>=20.0,<21.0  # Only needed for production
 requests>=2.25,<3.0
 django-environ==0.12.0 
 dj-database-url==2.3.0
+whitenoise==6.6.0
